--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/4.xhtml
@@ -4,8 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
+    <f:metadata>
+        <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
+        <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
+    </f:metadata>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
             <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
@@ -16,7 +20,6 @@
                 <!-- user dropdown -->
                 <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
                     <ul >
-                        <!--<li class="uk-active"><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></a></li>-->
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Chat</a></li>
                         <li><a href="#">Cerrar Sesion</a></li>
@@ -28,7 +31,6 @@
 
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                <!--<li class="uk-active"><a href="#"><img src="img/alumno/iconos-login/1.svg" width="80" alt=""></a></li>-->
                 <li class="uk-active"><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                 <li><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></h:link></li>
                 <li><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt=""/></h:link></li>
@@ -36,7 +38,6 @@
                 <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt=""/></h:link></li>
                 <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt=""/></a></li>
             </ul>
-
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
@@ -47,7 +48,6 @@
                 <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
                 <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></a></li>
             </ul>
-
         </div>
     </ui:define>
     <ui:define name="contenido">
@@ -69,35 +69,53 @@
                     </div>
                 </div>
                 <div class="uk-position-relative ">
-                    <form action="" class="uk-form-stacked">
+                    <h:form id="formulario-mapa-mental" class="uk-form-stacked">
                         <div class="uk-child-width-1-3@m" uk-grid="">
                             <div class="uk-flex uk-flex-center uk-position-relative">
                                 <h:graphicImage library="img" name="alumno/pop-art/mensaje4.svg" styleClass="imagen-nube-popart"/>
-                                <textarea rows="" cols="" class="posicion-texarea-comparar uk-textarea"/>
+                                <h:inputTextarea styleClass="posicion-texarea-comparar uk-textarea"
+                                             id="uno"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="uno" styleClass=""/>
                             </div>
                             <div class="uk-flex uk-flex-center uk-position-relative">
                                 <h:graphicImage library="img" name="alumno/pop-art/nube.svg" styleClass="nube-medio"/>
-                                <textarea rows="" cols="" class="posicion-texarea-comparar uk-textarea"/>
+                                <h:inputTextarea styleClass="posicion-texarea-comparar uk-textarea"
+                                             id="dos"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="dos" styleClass=""/>
                             </div>
                             <div class="uk-flex uk-flex-center uk-position-relative">
                                 <h:graphicImage library="img" name="alumno/pop-art/mensaje4.svg" styleClass="imagen-nube-popart" style="transform: rotateY(180deg)"/>
-                                <textarea rows="" cols="" class="posicion-texarea-comparar uk-textarea"/>
+                                <h:inputTextarea styleClass="posicion-texarea-comparar uk-textarea"
+                                                 id="tres"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="tres" styleClass=""/>
                             </div>
+                            <h:commandButton id="boton-enviar-mapa-mental-movil"
+                                             value="Send"
+                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             action="#{mapaMentalControlador.respondeMapaMental}"/>
                         </div>
-                    </form>
+                    </h:form>
                 </div>
-
                 <div class="nube-inferior uk-position-relative">
                     <h:graphicImage library="img" name="/fondo/nubes-abajo.svg"/>
                     <div class="uk-position-absolute imagen-comparar">
                         <h:graphicImage library="img" name="mounstro/whom.svg"/>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </ui:define>
 </ui:composition>
 </html>
