--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/5.xhtml
@@ -6,6 +6,10 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
+    <f:metadata>
+        <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
+        <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
+    </f:metadata>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
             <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
@@ -35,7 +39,6 @@
                 <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt=""/></h:link></li>
                 <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt=""/></a></li>
             </ul>
-
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
@@ -46,42 +49,83 @@
                 <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
                 <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></a></li>
             </ul>
-
         </div>
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-5.css"/>
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
-                <h3 class="titulo-mapa-5">Compare &amp; Contrast</h3>
-                <div class="contenido-5"></div>
-                <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
-                    <h3 class="">How the same</h3>
-                </div>
-                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
-                    <div class="nube-5">
-                        <input type="text"/>
+                <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                <h:form id="formulario-mapa-mental">
+                    <h3 class="titulo-mapa-5">Compare &amp; Contrast</h3>
+                    <div class="contenido-5"></div>
+                    <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
+                        <h3 class="">How the same</h3>
                     </div>
-                    <div class="nave-5"></div>
-                    <div class="nube-5">
-                        <input type="text"/>
+                    <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
+                        <div class="nube-5">
+                            <h:inputText styleClass="uk-input"
+                                         id="uno"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputText>
+                            <h:message for="uno" styleClass=""/>
+                        </div>
+                        <div class="nave-5"></div>
+                        <div class="nube-5">
+                            <h:inputText styleClass="uk-input"
+                                         id="dos"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputText>
+                            <h:message for="dos" styleClass=""/>
+                        </div>
+                    </h:panelGroup>
+                    <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right uk-margin-small-top ">
+                        <h3>How different</h3>
                     </div>
-                </h:panelGroup>
-                <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right uk-margin-small-top ">
-                    <h3>How different</h3>
-                </div>
-                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top uk-margin-small-bottom " pt:uk-grid="">
-                    <div class="nave-5-1"></div>
-                    <div class="input-5">
-                        <input type="text"/>
-                        <input type="text"/>
-                        <input type="text"/>
-                    </div>
-                    <div class="nave-5-2"></div>
-                </h:panelGroup>
+                    <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top uk-margin-small-bottom " pt:uk-grid="">
+                        <div class="nave-5-1"></div>
+                        <div class="input-5">
+                            <h:inputText styleClass="uk-input"
+                                         id="tres"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputText>
+                            <h:message for="tres" styleClass=""/>
+                            <h:inputText styleClass="uk-input"
+                                         id="cuatro"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputText>
+                            <h:message for="cuatro" styleClass=""/>
+                            <h:inputText styleClass="uk-input"
+                                         id="cinco"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputText>
+                            <h:message for="cinco" styleClass=""/>
+                        </div>
+                        <div class="nave-5-2">
+                        <h:commandButton id="boton-enviar-mapa-mental-movil"
+                                         value="Send"
+                                         rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         action="#{mapaMentalControlador.respondeMapaMental}"/>
+                        </div>
+                    </h:panelGroup>
+                </h:form>
             </div>
         </div>
-
     </ui:define>
 </ui:composition>
 </html>
