--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/8.xhtml
@@ -4,8 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
+    <f:metadata>
+        <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
+        <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
+    </f:metadata>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
             <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
@@ -58,38 +62,114 @@
                     <div class="imagen-hamburguesa  ">
                         <h:graphicImage library="img" name="/alumno/hamburguesa.svg"/>
                     </div>
-                    <form action="" class="uk-form-stacked">
+                    <h:form class="uk-form-stacked-movil">
                         <div class="uk-position-absolute texto-posicion">
-                            <h3 class="uk-text-center">Introduction:</h3>
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-large-bottom"/>
+                            <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                            <h3 class="uk-text-center">#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}</h3>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-large-bottom"
+                                         id="introduction"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="introduction" styleClass=""/>
                             <h3 class="uk-text-center margen-small">Supporting Deails:</h3>
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-medium-bottom" />
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-medium-bottom" />
-                            <textarea rows="" cols="" class="uk-textarea"/>
-                            <h3 class="uk-text-center uk-margin-remove-top">Conclusion:</h3>
-                            <textarea rows="" cols="" class="uk-textarea"/>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
+                                             id="deails1"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails1" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
+                                             id="deails2"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails2" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="deails3"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails3" styleClass=""/>
+                            <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}:</h3>
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="Conclusion"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="Conclusion" styleClass=""/>
+                            <h:commandButton id="boton-enviar-mapa-mental-escritorio"
+                                             value="Send"
+                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             action="#{mapaMentalControlador.respondeMapaMental}"/>
                         </div>
-                    </form>
+                    </h:form>
                 </div>
                 <div class="imagen-who-small uk-hidden@s">
                     <h:graphicImage library="img" name="mounstro/who.svg"/>
                 </div>
                 <div class="caja-capas-small uk-position-relative uk-hidden@s">
-
-<!--                        <h:graphicImage library="img" name="/alumno/hamburguesa.svg" styleClass="imagen-hamburguesa-small"/>-->
-
-                    <form action="" class="uk-form-stacked">
+                    <h:form id="formulario-mapa-mental-escritorio" class="uk-form-stacked">
                         <div class=" texto-posicion-small">
-                            <h3 class="uk-text-center">Introduction:</h3>
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-large-bottom"/>
+                            <h3 class="uk-text-center">#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}</h3>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-large-bottom"
+                                             id="introduction-m"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="introduction-m" styleClass=""/>
                             <h3 class="uk-text-center margen-small">Supporting Deails:</h3>
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-medium-bottom" />
-                            <textarea rows="" cols="" class="uk-textarea uk-margin-medium-bottom" />
-                            <textarea rows="" cols="" class="uk-textarea"/>
-                            <h3 class="uk-text-center uk-margin-remove-top">Conclusion:</h3>
-                            <textarea rows="" cols="" class="uk-textarea"/>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
+                                             id="deails1-m"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails1-m" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
+                                             id="deails2-m"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails2-m" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="deails3-m"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails3-m" styleClass=""/>
+                            <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}:</h3>
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="Conclusion-m"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             pt:placeholder="Some text...">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="Conclusion-m" styleClass=""/>
+                            <h:commandButton id="boton-enviar-mapa-mental-movil"
+                                             value="Send"
+                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             action="#{mapaMentalControlador.respondeMapaMental}"/>
                         </div>
-                    </form>
+                    </h:form>
                 </div>
             </div>
         </div>
